force-app/main/default/objects/Boardstore_Cart__c/Boardstore_Cart__c.object-meta.xml
<CustomObject>
    <description>This is the header object for the shopping cart of the boardstore.</description>
    <label>Boardstore Cart</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Boardstore Cart Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boardstore Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>