force-app/main/default/objects/Boardstore_Cart__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>The Billing details will be entered by the user from the shopping cart process</description>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>