force-app/main/default/objects/Boardstore_Cart__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>The billing details are entered by the user during the shopping cart process</description>
    <label>Billing Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>