force-app/main/default/objects/Boardstore_Cart__c/fields/Billing_Post_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Post_Code_Zip__c</fullName>
    <description>The billing details are entered by the user during the shopping cart process</description>
    <label>Billing Post Code / Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>