force-app/main/default/objects/Boardstore_Cart__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>The billing details are populated by the user from the shopping cart process</description>
    <label>Billing State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>