force-app/main/default/objects/Boardstore_Cart__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <description>Billing address details, will be populated upon details entered from the user in the cart process</description>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>