force-app/main/default/objects/Boardstore_Cart__c/fields/Cart_Status__c.field-meta.xml
<CustomField>
    <fullName>Cart_Status__c</fullName>
    <description>The status of the cart is used to apply logic relating to the progress of each cart, like abandonment for example.</description>
    <label>Cart Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Order - Processing</fullName>
            </value>
            <value>
                <fullName>Order - Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>