force-app/main/default/objects/Boardstore_Cart__c/fields/Cart_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Cart_Subtotal__c</fullName>
    <description>The sum of line subtotals</description>
    <label>Cart Subtotal</label>
    <summarizedField>Boardstore_Cart_Line__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Boardstore_Cart_Line__c.Boardstore_Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>