force-app/main/default/objects/Boardstore_Cart__c/fields/Cart_Total__c.field-meta.xml
<CustomField>
    <fullName>Cart_Total__c</fullName>
    <label>Cart Total</label>
    <summarizedField>Boardstore_Cart_Line__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Boardstore_Cart_Line__c.Boardstore_Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>