force-app/main/default/objects/Boardstore_Cart__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>This is the initial date that created the cart, used for calculations on abandonment</description>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>