force-app/main/default/objects/Boardstore_Cart__c/fields/Payment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this in a response from the payment gateway.</description>
    <label>Payment Confirmed</label>
    <type>Checkbox</type>
</CustomField>