force-app/main/default/objects/Boardstore_Cart__c/fields/Shipping_Details_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Details_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Details Confirmed</label>
    <type>Checkbox</type>
</CustomField>