force-app/main/default/objects/Boardstore_Cart__c/fields/Shipping_Post_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Post_Code_Zip__c</fullName>
    <label>Shipping Post Code / Zip</label>
    <length>25</length>
    <type>Text</type>
</CustomField>