force-app/main/default/objects/Boardstore_Cart__c/fields/Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Tax_Total__c</fullName>
    <formula>ROUND(( Cart_Subtotal__c *  (1/User_Tax_Rate__c) ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>