force-app/main/default/objects/Boardstore_Cart__c/fields/Total_Cart__c.field-meta.xml
<CustomField>
    <fullName>Total_Cart__c</fullName>
    <formula>Cart_Subtotal__c +  Tax_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cart</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>