force-app/main/default/objects/Boardstore_Cart__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <description>This is the count of the number of items in the cart</description>
    <label>Total Items</label>
    <summaryForeignKey>Boardstore_Cart_Line__c.Boardstore_Cart__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>