force-app/main/default/objects/Boardstore_Cart__c/fields/User_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>User_Tax_Rate__c</fullName>
    <label>User Tax Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>